--- a/css/mano.css
+++ b/css/mano.css
@@ -11,8 +11,9 @@ body {
     grid-column-gap: 1em;
     grid-row-gap: 1em;
 }
-.gridItem1{
-    grid-area: icon;
+.gridItem1 img{
+    width: 80%;
+    height: 50%;
 }
 .gridItem2 {
     grid-area: Top;
@@ -36,8 +37,8 @@ body {
     font-size: 10px;
 }
 .gridItem6 img{
-    width: 50%;
-    height: 30%;
+    width: 40%;
+    height: 70%;
     padding-bottom: 10px;
 }
 .gridItem6 small{
