--- a/css/mano.css
+++ b/css/mano.css
@@ -7,9 +7,9 @@ body {
     'icon Top admin'
     'skills main work'
     'E E E';
-    grid-template-columns: 250px auto 250px;
-    grid-column-gap: 1em;
-    grid-row-gap: 1em;
+    grid-template-columns: 150px 720px 150px;
+    grid-column-gap: 0.5cm;
+    grid-row-gap: 0.5cm;
 }
 .gridItem1 img{
     width: 80%;
@@ -21,6 +21,7 @@ body {
     text-align: center;
     margin: 25px 50px 50px 50px;
     font-size: 32px;
+    letter-spacing: 2px
 }
 .gridItem3 {
     grid-area: admin;
@@ -28,6 +29,7 @@ body {
     text-align:center;
     margin: 25px 50px 50px 50px;
     font-size: 32px;
+    letter-spacing: 2px
 }
 .gridItem4{
     grid-area: skills;
@@ -41,9 +43,14 @@ body {
     height: 70%;
     padding-bottom: 10px;
 }
-.gridItem6 small{
-    text-align:center;
-    position:relative;
+.gridItem6 small {
+    text-align: center;
+    font-size: 18px;
+    letter-spacing: 2px
+}
+.gridItem6 h3{
+    font-size: 25px;
+    letter-spacing: 1px
 }
 .gridItem7{
     grid-area: E;
@@ -56,4 +63,16 @@ body {
     width: 100%;
     height: 10px;
     background-color: antiquewhite;
+}
+p {
+    letter-spacing: 3px;
+}
+main {
+    letter-spacing: 2px;
+}
+.gridItem5 img {
+    width: 40%;
+    height: 70%;
+    padding-bottom: 10px;
+    text-align: right;
 }
